--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/DiscountPremium/DiscountPremiumReturnView.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/DiscountPremium/DiscountPremiumReturnView.cshtml
@@ -1,4 +1,5 @@
-﻿@using Feature.Wealth.Component.Models.Invest;
+﻿@using Foundation.Wealth.Helper;
+@using Feature.Wealth.Component.Models.Invest;
 @using Feature.Wealth.Component.Models.DiscountPremium;
 @model DiscountPremiumModel
 
