--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/PopularityFund/PopularFundReturnView.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/PopularityFund/PopularFundReturnView.cshtml
@@ -74,7 +74,7 @@
 			<div class="c-cardTable__content">@item.RiskRewardLevel</div>
 		</td>
 		<td class="c-cardTable__body" data-card-table-width="1/2">
-			<div class="c-cardTable__title" data-length="5">點擊率</div>
+			<div class="c-cardTable__title" data-length="5">點擊數</div>
 			@if (item.ViewCount != null)
 			{
 				<div class="c-cardTable__content">@item.ViewCount</div>
