--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/GlobalIndex/GlobalIndexDetailWrap.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/GlobalIndex/GlobalIndexDetailWrap.cshtml
@@ -42,7 +42,7 @@
                                     }
                                     else if (Model.GlobalIndexDetail.DailyReturn.Contains('-'))
                                     {
-                                        <div class="c-numerical__content"><span class="o-fall">@Model.GlobalIndexDetail.DailyReturn</span></div>
+                                        <div class="c-numerical__content"><span class="o-fall">@Model.GlobalIndexDetail.DailyReturn.Replace("-", "")</span></div>
                                     }
                                 </div>
                             </div>
@@ -59,7 +59,7 @@
                                     }
                                     else if (Model.GlobalIndexDetail.WeeklyReturn.Contains('-'))
                                     {
-                                        <div class="c-numerical__content"><span class="o-fall">@Model.GlobalIndexDetail.WeeklyReturn</span></div>
+                                        <div class="c-numerical__content"><span class="o-fall">@Model.GlobalIndexDetail.WeeklyReturn.Replace("-", "")</span></div>
                                     }
                                 </div>
                             </div>
@@ -76,7 +76,7 @@
                                     }
                                     else if (Model.GlobalIndexDetail.OneMonthReturn.Contains('-'))
                                     {
-                                        <div class="c-numerical__content"><span class="o-fall">@Model.GlobalIndexDetail.OneMonthReturn</span></div>
+                                        <div class="c-numerical__content"><span class="o-fall">@Model.GlobalIndexDetail.OneMonthReturn.Replace("-", "")</span></div>
                                     }
                                 </div>
                             </div>
@@ -93,7 +93,7 @@
                                     }
                                     else if (Model.GlobalIndexDetail.ThreeMonthReturn.Contains('-'))
                                     {
-                                        <div class="c-numerical__content"><span class="o-fall">@Model.GlobalIndexDetail.ThreeMonthReturn</span></div>
+                                        <div class="c-numerical__content"><span class="o-fall">@Model.GlobalIndexDetail.ThreeMonthReturn.Replace("-", "")</span></div>
                                     }
                                 </div>
                             </div>
@@ -110,7 +110,7 @@
                                     }
                                     else if (Model.GlobalIndexDetail.SixMonthReturn.Contains('-'))
                                     {
-                                        <div class="c-numerical__content"><span class="o-fall">@Model.GlobalIndexDetail.SixMonthReturn</span></div>
+                                        <div class="c-numerical__content"><span class="o-fall">@Model.GlobalIndexDetail.SixMonthReturn.Replace("-", "")</span></div>
                                     }
                                 </div>
                             </div>
@@ -127,7 +127,7 @@
                                     }
                                     else if (Model.GlobalIndexDetail.OneYearReturn.Contains('-'))
                                     {
-                                        <div class="c-numerical__content"><span class="o-fall">@Model.GlobalIndexDetail.OneYearReturn</span></div>
+                                        <div class="c-numerical__content"><span class="o-fall">@Model.GlobalIndexDetail.OneYearReturn.Replace("-", "")</span></div>
                                     }
                                 </div>
                             </div>
@@ -144,7 +144,7 @@
                                     }
                                     else if (Model.GlobalIndexDetail.YeartoDateReturn.Contains('-'))
                                     {
-                                        <div class="c-numerical__content"><span class="o-fall">@Model.GlobalIndexDetail.YeartoDateReturn</span></div>
+                                        <div class="c-numerical__content"><span class="o-fall">@Model.GlobalIndexDetail.YeartoDateReturn.Replace("-", "")</span></div>
                                     }
                                 </div>
                             </div>
@@ -161,7 +161,7 @@
                                     }
                                     else if (Model.GlobalIndexDetail.ThreeYearReturn.Contains('-'))
                                     {
-                                        <div class="c-numerical__content"><span class="o-fall">@Model.GlobalIndexDetail.ThreeYearReturn</span></div>
+                                        <div class="c-numerical__content"><span class="o-fall">@Model.GlobalIndexDetail.ThreeYearReturn.Replace("-", "")</span></div>
                                     }
                                 </div>
                             </div>
@@ -694,91 +694,75 @@
             </div>
         </td>
         <td>
-            <% if (!d1) { %>
+            <% if (typeof d1 == "number" && !isNaN(d1) && d1 >= 0) { %>
+                <span class="o-rise"><%= d1.toFixed(2) %>%</span>
+            <% } else if (typeof d1 == "number" && !isNaN(d1) && d1 < 0) { %>
+                <span class="o-fall"><%= Math.abs(d1).toFixed(2) %>%</span>
+            <% } else { %>
                 <span>-</span>
-            <% } %>
-            <% if (typeof d1 == "number" && !isNaN(d1) && d1 > 0) { %>
-                <span class="o-rise"><%= d1 %>%</span>
-            <% } %>
-            <% if (typeof d1 == "number" && !isNaN(d1) && d1 < 0) { %>
-                <span class="o-fall"><%= d1 %>%</span>
             <% } %>
         </td>
         <td>
-            <% if (!d7) { %>
+            <% if (typeof d7 == "number" && !isNaN(d7) && d7 >= 0) { %>
+                <span class="o-rise"><%= d7.toFixed(2) %>%</span>
+            <% } else if (typeof d7 == "number" && !isNaN(d7) && d7 < 0) { %>
+                <span class="o-fall"><%= Math.abs(d7).toFixed(2) %>%</span>
+            <% } else { %>
                 <span>-</span>
-            <% } %>
-            <% if (typeof d7 == "number" && !isNaN(d7) && d7 > 0) { %>
-                <span class="o-rise"><%= d7 %>%</span>
-            <% } %>
-            <% if (typeof d7 == "number" && !isNaN(d7) && d7 < 0) { %>
-                <span class="o-fall"><%= d7 %>%</span>
             <% } %>
         </td>
         <td>
-            <% if (!m1) { %>
+            <% if (typeof m1 == "number" && !isNaN(m1) && m1 >= 0) { %>
+                <span class="o-rise"><%= m1.toFixed(2) %>%</span>
+            <% } else if (typeof m1 == "number" && !isNaN(m1) && m1 < 0) { %>
+                <span class="o-fall"><%= Math.abs(m1).toFixed(2) %>%</span>
+            <% } else { %>
                 <span>-</span>
-            <% } %>
-            <% if (typeof m1 == "number" && !isNaN(m1) && m1 > 0) { %>
-                <span class="o-rise"><%= m1 %>%</span>
-            <% } %>
-            <% if (typeof m1 == "number" && !isNaN(m1) && m1 < 0) { %>
-                <span class="o-fall"><%= m1 %>%</span>
             <% } %>
         </td>
         <td>
-            <% if (!m3) { %>
+            <% if (typeof m3 == "number" && !isNaN(m3) && m3 >= 0) { %>
+                <span class="o-rise"><%= m3.toFixed(2) %>%</span>
+            <% } else if (typeof m3 == "number" && !isNaN(m3) && m3 < 0) { %>
+                <span class="o-fall"><%= Math.abs(m3).toFixed(2) %>%</span>
+            <% } else { %>
                 <span>-</span>
-            <% } %>
-            <% if (typeof m3 == "number" && !isNaN(m3) && m3 > 0) { %>
-                <span class="o-rise"><%= m3 %>%</span>
-            <% } %>
-            <% if (typeof m3 == "number" && !isNaN(m3) && m3 < 0) { %>
-                <span class="o-fall"><%= m3 %>%</span>
             <% } %>
         </td>
         <td>
-            <% if (!m6) { %>
+            <% if (typeof m6 == "number" && !isNaN(m6) && m6 >= 0) { %>
+                <span class="o-rise"><%= m6.toFixed(2) %>%</span>
+            <% } else if (typeof m6 == "number" && !isNaN(m6) && m6 < 0) { %>
+                <span class="o-fall"><%= Math.abs(m6).toFixed(2) %>%</span>
+            <% } else { %>
                 <span>-</span>
-            <% } %>
-            <% if (typeof m6 == "number" && !isNaN(m6) && m6 > 0) { %>
-                <span class="o-rise"><%= m6 %>%</span>
-            <% } %>
-            <% if (typeof m6 == "number" && !isNaN(m6) && m6 < 0) { %>
-                <span class="o-fall"><%= m6 %>%</span>
             <% } %>
         </td>
         <td>
-            <% if (!y1) { %>
+            <% if (typeof y1 == "number" && !isNaN(y1) && y1 >= 0) { %>
+                <span class="o-rise"><%= y1.toFixed(2) %>%</span>
+            <% } else if (typeof y1 == "number" && !isNaN(y1) && y1 < 0) { %>
+                <span class="o-fall"><%= Math.abs(y1).toFixed(2) %>%</span>
+            <% } else { %>
                 <span>-</span>
-            <% } %>
-            <% if (typeof y1 == "number" && !isNaN(y1) && y1 > 0) { %>
-                <span class="o-rise"><%= y1 %>%</span>
-            <% } %>
-            <% if (typeof y1 == "number" && !isNaN(y1) && y1 < 0) { %>
-                <span class="o-fall"><%= y1 %>%</span>
             <% } %>
         </td>
         <td>
-            <% if (!ytd) { %>
+            <% if (typeof ytd == "number" && !isNaN(ytd) && ytd >= 0) { %>
+                <span class="o-rise"><%= ytd.toFixed(2) %>%</span>
+            <% } else if (typeof ytd == "number" && !isNaN(ytd) && ytd < 0) { %>
+                <span class="o-fall"><%= Math.abs(ytd).toFixed(2) %>%</span>
+            <% } else { %>
                 <span>-</span>
-            <% } %>
-            <% if (typeof ytd == "number" && !isNaN(ytd) && ytd > 0) { %>
-                <span class="o-rise"><%= ytd %>%</span>
-            <% } %>
-            <% if (typeof ytd == "number" && !isNaN(ytd) && ytd < 0) { %>
-                <span class="o-fall"><%= ytd %>%</span>
             <% } %>
         </td>
         <td>
-            <% if (!y3) { %>
+            <% if (typeof y3 == "number" && !isNaN(y3) && y3 >= 0) { %>
+                <span class="o-rise"><%= y3.toFixed(2) %>%</span>
+            <% } else if (typeof y3 == "number" && !isNaN(y3) && y3 < 0) { %>
+                <span class="o-fall"><%= Math.abs(y3).toFixed(2) %>%</span>
+            <% } else { %>
                 <span>-</span>
-            <% } %>
-            <% if (typeof y3 == "number" && !isNaN(y3) && y3 > 0) { %>
-                <span class="o-rise"><%= y3 %>%</span>
-            <% } %>
-            <% if (typeof y3 == "number" && !isNaN(y3) && y3 < 0) { %>
-                <span class="o-fall"><%= y3 %>%</span>
             <% } %>
         </td>
     </tr>
