--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/GlobalIndex/_GobalIndexWrapPartial.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/GlobalIndex/_GobalIndexWrapPartial.cshtml
@@ -15,7 +15,7 @@
         }
         @if (!Model.UpOrDown)
         {
-            <span class="o-fall">@Model.Change</span>
+            <span class="o-fall">@Model.Change.Replace("-", "")</span>
         }
     </td>
     <td>
@@ -25,7 +25,7 @@
         }
         @if (!Model.UpOrDown)
         {
-            <span class="o-fall">@Model.ChangePercentage</span>
+            <span class="o-fall">@Model.ChangePercentage.Replace("-", "")</span>
         }
     </td>
 </tr>
