fix: apppay log紀錄

--- a/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
@@ -365,7 +365,7 @@
                     continue;
                 }
                 if (key == "returnUrl") {
-                    loginUrl += `${key}=${encodeURIComponent(location.href)}&`;
+                    loginUrl += `${key}${encodeURIComponent('=')}${location.href}&`;
                     continue;
                 }
                 if (key== "ibi") {
