搜尋 FundCode 加回去

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/USStock/USStock.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/USStock/USStock.cshtml
@@ -472,7 +472,7 @@
                 },
                 search: {
                     ele: '#keyword',
-                    fields: ['FirstBankCode', 'EnglishName', 'ChineseName'],
+                    fields: ['FirstBankCode', 'EnglishName', 'ChineseName', 'FundCode'],
                     start_length: 2,
                     bindEvent: false,
                     multi: function () {
